--- a/ginas/assets/css/ginas.css
+++ b/ginas/assets/css/ginas.css
@@ -234,7 +234,7 @@ a {
         .front-menu2{
             margin-top:15px;
             margin-bottom:10px;
-            background-color:#9cc1da;
+            background-color:#a2c9e3;
             font-size:26px;
             border-right:1px solid white;
             border-left:1px solid white;
@@ -261,13 +261,16 @@ a {
         .main-title{
             font-size:40px;
         }
-
+/*classes to create spaced cells in bootstrap
+    add .no-gutter to parent row,
+    left-col to the leftmost column,
+    and cell to a child div of each column to add the background
+ */
         .no-gutter > [class*='col-'] {
             padding-right:0;
             padding-left:0;
             /*margin-bottom:15px;*/
         }
-
         .left-col{
             margin-right:15px;
         }
@@ -281,6 +284,8 @@ a {
             padding:10px;
             margin-bottom:15px;
         }
+/*end spaced cells*/
+
         .banner{
             background-color:#375576;
             color:white;
@@ -288,7 +293,7 @@ a {
 
         .button{
             margin-top:10px;
-            background-color:rgb(55, 85, 118);
+            background-color:#375576;
             border:2px solid #213851;
             color:white;
             font-size:18px;
@@ -315,7 +320,7 @@ a {
         }
         .button:hover{
             background-color:#9cc1da;
-            border:1px solid #729ab5;
+            border:2px solid #80b4d6;
         }
         .date{
             font-size:17px;
@@ -330,7 +335,12 @@ a {
             color:white;
             margin-top:20px;!important
         }
-
+        h2.banner-name{
+            color:white;
+            margin-top:20px;
+            float:left;
+            padding-right:5px;
+        }
 
         .header-icon{
             height:50px;
@@ -351,12 +361,7 @@ a {
             font-size: 5em;
             margin:10px
         }
-        h2.banner-name{
-            color:white;
-            margin-top:20px;
-            float:left;
-            padding-right:5px;
-        }
+
         .banner-icon{
             height:50px;
             width:50px;
