added changes to newsletter form
Former-commit-id: 215a715beeb8973d4534e04d803db8ee9c4bb2be

--- a/ginas/assets/css/ginas.css
+++ b/ginas/assets/css/ginas.css
@@ -224,6 +224,9 @@ a {
 
 
         }
+        .main-menu.border{
+            
+        }
         .main-menu.active{
             background-color:#375576;
         }
